<resources>
    <string name="app_name">Chartr</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_main_screen">Sign in</string>
    <string name="app_main_screen_title">Cognito Identity</string>
    <string name="app_main_desc">A sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Menu">Menu</string>
    <string name="pick_MFA">MFA Options</string>
    <string name="title_activity_about_app">AboutApp</string>
    <string name="more_info">This is a sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="title_activity_sign_up_confirm">SignUpConfirm</string>
    <string name="title_activity_mfa">MFAActivity</string>
    <string name="title_activity_choose_mfa">ChooseMFA</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="title_activity_add_attribute">AddAttributeActivity</string>
    <string name="title_activity_device_settings">DeviceSettings</string>
    <string name="title_activity_new_password">NewPassword</string>
    <string name="name_placeholder">Name</string>
    <string name="rating_placeholder">Rating</string>
    <string name="seat_number_placeholder">Seats</string>
    <string name="seat_text">Seats Filled</string>
    <string name="dateTime_placeholder">Date and time</string>
    <string name="start_placeholder">Start</string>
    <string name="destination_placeholder">Destination</string>
    <string name="email_placeholder">Email</string>
    <string name="phone_placeholder">Phone Number</string>
    <string name="review_count_placeholder">Review Count</string>
    <string name="user_profile_icon">A user uploaded profile image.</string>
    <string name="button_search">Where do you want to go?</string>
    <string name="button_accept">Accept</string>
    <string name="button_reject">Reject</string>
    <string name="button_add">+</string>
    <string name="button_logout">Logout</string>
    <string name="button_edit_profile">Edit</string>
    <string name="title_logistics">Logistics</string>
    <string name="searchFragmentPreferredDriverEmail">Preferred Driver (email)</string>
    <string name="searchFragmentPreferredDriver">Preferred Driver</string>
    <string name="searchFragmentPriceRange">Price range</string>
    <string name="searchFragmentPriceRangeFrom">From</string>
    <string name="searchFragmentPriceRangeTo">To</string>
    <string name="searchFragmentPriceRangeSeparator">-</string>
    <string name="searchFragmentButtonSearch">Search</string>
    <string name="back">Back</string>
    <string name="request">Request</string>
    <string name="searchFragmentDepartureDate">Departure date</string>
    <string name="searchFragmentDateExample">eg: mm/dd/yyyy</string>
    <string name="no_requests">There are no pending requests.</string>
    <string name="no_confirmed_trips">You currently have no confirmed trips.</string>
    <string name="no_pending_trips">You currently have no pending trips.</string>
    <string name="no_posted_trips">You currently have no posted trips.</string>
    <string name="toolbar_profile_text">Profile</string>
    <string name="trip_container_date">Date</string>
    <string name="trip_container_to">To:</string>
    <string name="trip_container_from">From:</string>
    <string name="no_search_trips">No available trips match your search.</string>
    <string name="start_location_clear">Start location clear</string>
    <string name="end_location_clear">End location clear</string>
    <string name="clear_date">Clear date</string>
</resources>
